--- a/main.html
+++ b/main.html
@@ -1,119 +1,94 @@
 <html>
 
 <head>
-
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-  <link rel="stylesheet" href="styles.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="styles.css">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js">
+		
+	</script>
 </head>
 
 <body>
-  <div class="container text-center block-heading">
-    <h2 style="color: #3b99e0">Shopping cart</h2>
-    <div class="badge text-wrap lh-base" style="width: 470px; color: black; font-size: small; font-weight: 300;">
-      This customer is very important, the customer will be followed by the customer. Now, as an urn, I have no right to
-      be possession of property.
+	<div>
+		<form class="row g-3 needs-validation" novalidate>
+  <div class="col-md-4">
+    <label for="first-name-input" class="form-label">First Name</label>
+    <input type="text" class="form-control" id="first-name-input" value="" required>
+    <div class="invalid-feedback">
+      First name required!
     </div>
-
-    <div class="row my-5 bg-white">
-      <div class="col-lg-8 py-5">
-        <div class="product">
-          <div class="row mb-4">
-            <div class="col-3">
-              <a href="#">
-                <img
-                src="https://www.apple.com/v/iphone/home/bu/images/overview/select/iphone_15__fm75iyqlkjau_large_2x.png"
-                alt="vivo image" class="img-fluid" />
-              </a>
-            </div>
-            <div class="col-4">
-              <h6 class="m-0" style="color: #3b99e0">I am very sorry</h6>
-              <p class="m-0">Display: 5 inches</p>
-              <p class="m-0">RAM: 4GB</p>
-              <p class="m-0">Memory: 32GB</p>
-            </div>
-            <div class="col-3">
-              <label for="inputZip" class="form-label">Quantity:</label>
-              <input type="number" class="form-control text-center" id="inputZip" placeholder="0" />
-            </div>
-            <div class="col-2 mt-3">Rs. 60,999/-</div>
-          </div>
-        </div>
-        <div class="row mb-4 product">
-          <div class="col-3">
-            <a href="#">
-              <img
-              src="https://www.apple.com/v/iphone/home/bu/images/overview/select/iphone_15__fm75iyqlkjau_large_2x.png"
-              alt="vivo image" class="img-fluid" />
-            </a>
-          </div>
-          <div class="col-4">
-            <h6 class="m-0" style="color: #3b99e0">I am very sorry</h6>
-              <p class="m-0">Display: 5 inches</p>
-              <p class="m-0">RAM: 4GB</p>
-              <p class="m-0">Memory: 32GB</p>
-          </div>
-          <div class="col-3">
-            <label for="inputZip" class="form-label">Quantity:</label>
-            <input type="number" class="form-control text-center" id="inputZip" placeholder="1" />
-          </div>
-          <div class="col-2 mt-3">Rs. 60,999/-</div>
-        </div>
-        <div class="row mb-4 product">
-          <div class="col-3">
-            <a href="#">
-              <img
-              src="https://www.apple.com/v/iphone/home/bu/images/overview/select/iphone_15__fm75iyqlkjau_large_2x.png"
-              alt="vivo image" class="img-fluid" />
-            </a>
-          </div>
-          <div class="col-4">
-            <h6 class="m-0" style="color: #3b99e0">I am very sorry</h6>
-              <p class="m-0">Display: 5 inches</p>
-              <p class="m-0">RAM: 4GB</p>
-              <p class="m-0">Memory: 32GB</p>
-          </div>
-          <div class="col-3">
-            <label for="inputZip" class="form-label">Quantity:</label>
-            <input type="number" class="form-control text-center" id="inputZip" placeholder="1" />
-          </div>
-          <div class="col-2 mt-3">Rs. 60,999/-</div>
-        </div>
-      </div>
-      <div class="col-lg-4 pt-5 summary" style="background-color: #f7fbff; border-top: 2px solid #5ea4f3">
-        <h3>Summary</h3>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item d-flex justify-content-between summary-item">
-            <span>Subtotal</span>
-            <span>$360</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between summary-item">
-            <span>Discount</span>
-            <span>$0</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between summary-item">
-            <span>Shipping</span>
-            <span>$0</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between summary-item">
-            <span>Total</span>
-            <span>$360</span>
-          </li>
-          <button type="button" class="btn btn-primary">checkout</button>
-        </ul>
-      </div>
-    </div>
-
   </div>
+  <div class="col-md-4">
+    <label for="last-name-input" class="form-label">Last Name</label>
+    <input type="text" class="form-control" id="last-name-input" value="" required>
+    <div class="invalid-feedback">
+      Last name required!
+    </div>
+  </div>
+	<div class="mb-3">
+  <label for="email-input" class="form-label">Email Address</label>
+  <input type="email" class="form-control" id="email-input" placeholder="name@example.com" required>
+		<div class="invalid-feedback">
+     Email required!
+    </div>
+</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-    crossorigin="anonymous"></script>
-  <script type="text/javascript" src="./script.js"></script>
+			 <div class="col-md-4">
+    <label for="college-input" class="form-label">College</label>
+    <input type="text" class="form-control" id="college-input" value="" required>
+    <div class="invalid-feedback">
+    Please provide a valid college.
+    </div>
+			 </div>
+			<div>
+				 <label for="grad-year-select" class="form-label">Graduation Year</label>
+		<select class="form-select" id="grad-year-select" aria-label="Default select example" required>
+	  <option selected>Choose</option>
+	  <option value="1">2020</option>
+	  <option value="2">2021</option>
+	  <option value="3">2022</option>
+	  <option value="3">2023</option>
+	</select>
+				<div class="invalid-feedback">
+    Please select a valid Gradution year.
+    </div>
+			</div>
+				  <div class="col-md-4">
+    <label for="roll-no-input" class="form-label">Roll No.</label>
+    <input type="text" class="form-control" id="roll-no-input"  value="debu1" required>
+    <div class="invalid-feedback">
+      Please provide a valid Rollno..
+    </div>
+  </div>
+  </div>
+  
+  <div class="col-md-3">
+    <label for="validationCustom04" class="form-label">State</label>
+    <select class="form-select" id="validationCustom04" required>
+      <option selected disabled value="">Choose...</option>
+      <option>...</option>
+    </select>
+  <div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="conditions-checkbox" required>
+      <label class="form-check-label" for="conditions-checkbox">
+        Agree to terms and conditions
+      </label>
+     <div class="invalid-feedback">
+    You must agree before submitting.
+    </div>
+    </div>
+  </div>
+  <div class="col-12">
+    <button class="btn btn-primary" type="submit">Submit form</button>
+  </div>
+</form>
+	</div>
+	
+    <script type="text/javascript" src="./script.js">
+		
+</script>
+
 </body>
 
 </html>
